# discord_quote_bot

./: Cargo.toml  sqlx-data.json
commands/: quote.rs
migrations/: 20230115235905_initial_migration.sql
src/: main.rs
