[package]
name = "discord_quote_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["color","help","usage","suggestions","derive"]}
poise = "0.5.2"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "offline", "chrono"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
